[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ontrack"
version = "0.1.0"
description = "Scan directory trees and report file statistics from YAML configuration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.0",
]

[project.scripts]
ontrack = "ontrack:cli"
